Changed some things from only accepting Bones to accepting IdObject + cleanups